--- a/KMD/app/src/main/AndroidManifest.xml
+++ b/KMD/app/src/main/AndroidManifest.xml
@@ -15,11 +15,11 @@
         android:theme="@style/Theme.KMD"
         tools:targetApi="31">
         <activity
+            android:windowSoftInputMode="adjustResize"
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.KMD"
-            android:windowSoftInputMode="adjustResize">
+            android:theme="@style/Theme.KMD">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
