--- a/v0.2/KMD/gradle/libs.versions.toml
+++ b/v0.2/KMD/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
 material = "1.12.0"
+aboutlib_version = "11.4.0"
 
 lifecycleRuntimeKtx = "2.8.6"
 activityCompose = "1.9.2"
@@ -58,7 +59,6 @@ koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin" }
 
-fsaf = { module = "com.github.K1rakishou:Fuck-Storage-Access-Framework", version = "1.1.3" }
 androidx-preference-ktx = { group = "androidx.preference", name = "preference-ktx", version.ref = "preferenceKtx" }
 
 serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization_version" }
@@ -77,6 +77,7 @@ coil-network-okhttp = { module = "io.coil-kt.coil3:coil-network-okhttp", version
 jsoup = "org.jsoup:jsoup:1.18.1"
 
 ktlint-core = { module = "com.pinterest.ktlint:ktlint-cli", version.ref = "ktlint-core" }
+aboutLibraries-compose = { module = "com.mikepenz:aboutlibraries-compose-m3", version.ref = "aboutlib_version" }
 
 [bundles]
 koin = ["koin-core", "koin-android", "koin-compose"]
@@ -92,4 +93,5 @@ serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref 
 ksp = { id = "com.google.devtools.ksp", version = "2.0.21-1.0.26" }
 room = { id = "androidx.room", version.ref = "room" }
 spotless-gradle = { id = "com.diffplug.spotless", version.ref = "spotless" }
+aboutLibraries = { id = "com.mikepenz.aboutlibraries.plugin", version.ref = "aboutlib_version" }
 
