--- a/KMD/gradle/libs.versions.toml
+++ b/KMD/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.7.3"
+firebase-bom = "33.8.0"
 zxing_version = "3.4.1"
 kotlin = "2.0.21"
 coreKtx = "1.15.0"
@@ -9,6 +10,8 @@ espressoCore = "3.6.1"
 appcompat = "1.7.0"
 material = "1.12.0"
 aboutlib_version = "11.4.0"
+googleservices_version = "4.4.2"
+crashlytics_version = "3.0.2"
 lifecycleRuntimeKtx = "2.8.6"
 activityCompose = "1.9.2"
 composeBom = "2024.09.03"
@@ -24,6 +27,10 @@ spotless = "7.0.0"
 ktlint-core = "1.5.0"
 
 [libraries]
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebase-bom" }
+firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
+firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics" }
+
 zxing = { module = "com.google.zxing:core", version.ref = "zxing_version" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -83,4 +90,6 @@ ksp = { id = "com.google.devtools.ksp", version = "2.0.21-1.0.26" }
 room = { id = "androidx.room", version.ref = "room" }
 spotless-gradle = { id = "com.diffplug.spotless", version.ref = "spotless" }
 aboutLibraries = { id = "com.mikepenz.aboutlibraries.plugin", version.ref = "aboutlib_version" }
+google-services = { id = "com.google.gms.google-services", version = "4.4.2" }
+firebase-crashlytics = { id = "com.google.firebase.crashlytics", version = "3.0.2" }
 
