--- a/KMD/gradle/libs.versions.toml
+++ b/KMD/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 agp = "8.7.3"
-firebase-bom = "33.8.0"
+firebase-bom = "33.9.0"
 zxing_version = "3.4.1"
 kotlin = "2.0.21"
 coreKtx = "1.15.0"
@@ -11,7 +11,7 @@ appcompat = "1.7.0"
 material = "1.12.0"
 aboutlib_version = "11.4.0"
 googleservices_version = "4.4.2"
-crashlytics_version = "3.0.2"
+crashlytics_version = "3.0.3"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.0"
 composeBom = "2025.01.01"
@@ -47,7 +47,7 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
-androidx-material3-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version = "1.7.3" }
+androidx-material3-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version = "1.7.7" }
 kotlinx-immutable-collections = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable", version = "0.3.8" }
 voyager-navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyager" }
 voyager-transitions = { module = "cafe.adriel.voyager:voyager-transitions", version.ref = "voyager" }
@@ -91,6 +91,6 @@ ksp = { id = "com.google.devtools.ksp", version = "2.0.21-1.0.26" }
 room = { id = "androidx.room", version.ref = "room" }
 spotless-gradle = { id = "com.diffplug.spotless", version.ref = "spotless" }
 aboutLibraries = { id = "com.mikepenz.aboutlibraries.plugin", version.ref = "aboutlib_version" }
-google-services = { id = "com.google.gms.google-services", version = "4.4.2" }
-firebase-crashlytics = { id = "com.google.firebase.crashlytics", version = "3.0.2" }
+google-services = { id = "com.google.gms.google-services", version.ref = "googleservices_version" }
+firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "crashlytics_version" }
 
