--- a/KMD/gradle/libs.versions.toml
+++ b/KMD/gradle/libs.versions.toml
@@ -1,27 +1,27 @@
 [versions]
-agp = "8.7.3"
+agp = "8.8.1"
 firebase-bom = "33.9.0"
 zxing_version = "3.4.1"
-kotlin = "2.0.21"
+kotlin = "2.1.10"
 coreKtx = "1.15.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
 material = "1.12.0"
-aboutlib_version = "11.4.0"
+aboutlib_version = "11.6.0"
 googleservices_version = "4.4.2"
 crashlytics_version = "3.0.3"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.0"
-composeBom = "2025.01.01"
+composeBom = "2025.02.00"
 voyager = "1.0.0"
 koin = "4.0.0-RC2"
 preferenceKtx = "1.2.1"
-serialization_version = "1.7.3"
+serialization_version = "1.8.0"
 xml_serialization_version = "0.90.3"
 okhttp_version = "5.0.0-alpha.14"
-coil = "3.0.0-alpha10"
+coil = "3.1.0"
 room = "2.6.1"
 spotless = "7.0.0"
 ktlint-core = "1.5.0"
@@ -47,7 +47,7 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
-androidx-material3-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version = "1.7.7" }
+androidx-material3-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version = "1.7.8" }
 kotlinx-immutable-collections = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable", version = "0.3.8" }
 voyager-navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyager" }
 voyager-transitions = { module = "cafe.adriel.voyager:voyager-transitions", version.ref = "voyager" }
