--- a/KMD/app/src/main/AndroidManifest.xml
+++ b/KMD/app/src/main/AndroidManifest.xml
@@ -14,13 +14,13 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/logo_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.KMD"
+        android:theme="@style/Theme.Tachiyomi"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.KMD">
+            android:theme="@style/Theme.Tachiyomi.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
